# Termitas

./: .gitignore  README.md  RTX_5090_GUIDE.md  build_exe.py  config.py  gpu_check.py  install_cuda_pytorch.py  install_cuda_uv.py  main.py  main_exe.py  pyproject.toml
database/: chat.db  chat_db.py  models_db.py
hf/: active_model.py  auth.py  downloader.py  list.py  system_info.py
llm/: __init__.py  model_downloader.py  simple_inference.py
ui/: chat_window.py  grid.py  options_window.py
ui/chat/: __init__.py  chat_selector.py
ui/common/: label_with_border.py
ui/core/: chat_window.py  gpu_settings.py  grid.py  options_window.py  settings_dialog.py  terminal_window.py  window_utils.py
ui/models/: active.py  downloaded.py  list_models.py
