[project]
name = "termitas"
version = "0.1.0"
description = "AI Terminal Expert - Local LLM-powered terminal assistant"
authors = [
    {name = "Tomas Engdahl", email = "tomas.engdahl@bahnhof.se"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "huggingface-hub>=0.19.0",
    "requests>=2.31.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.24.0",
    "tokenizers>=0.14.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# Configure uv to use PyTorch's CUDA index
[tool.uv]
indexes = [
    {name = "pytorch-cuda", url = "https://download.pytorch.org/whl/cu128"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termitas"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
